Update 's1u8orf6m-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:a2c280b44b0a43414a7d3a96c0e36f46a280d2ae@sha256:dccb583d1d4600e79a8b55f055d9728a3ec5cdadd22c823a67081eb28ffcfc55

--- a/components/s1u8orf6m-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/s1u8orf6m-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s1u8orf6m-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:a2c280b44b0a43414a7d3a96c0e36f46a280d2ae@sha256:dccb583d1d4600e79a8b55f055d9728a3ec5cdadd22c823a67081eb28ffcfc55
+          name: container-image
